<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TrafficDefender</string>
    <string name="action_settings">Settings</string>
    <string name="info">Network Info</string>
    <string name="stop">Stop internet</string>
    <string name="start">Start Internet</string>
    <string name="notif_status">Mobile internet was disabled, limit of mBytes was achieved.</string>
    <string name="stop_serv">Stop control</string>
    <string name="pref_Mbytes_Title">Limit of Mbytes</string>
    <string name="pref_Mbytes_sum">Set the limit of Mbytes to download for a day</string>
    <string name="pref_auto">Set autorun</string>
    <string name="pref_category_os">OS</string>
    <string name="pref_category_about">About</string>
    <string name="about">Contact information</string>
    <string name="contact">email: \n<u>androidghost77@gmail.com</u></string>
    <string name="update">Update</string>
    <string name="start_serv">Start control</string>
    <string name="download">Used traffic status \nfor a day:</string>
    <string name="pref_foreground">System can not kill the app</string>
    <string name="statistic_text">Select period for statistic:</string>
    <string name="week">Last 7 days</string>
    <string name="month">Last 30 days</string>
    <string name="six_months">Last 180 days</string>
    <string name="year">Last 365 days</string>
    <string name="make_stat">Make statistic</string>
    <string name="clear">Clear all data</string>
    <string name="stat">Statistic</string>
    <string name="clear_data">Clear all data from database</string>
    <string name="message">Are you shoure to clear all data?</string>
    <string name="week_traff">Week usage traffic</string>
    <string name="days">Days</string>
    <string name="traff_usage">Traffic usage, Mb</string>
    <string name="month_traff">Month usage traffic</string>
    <string name="months">Months</string>
    <string name="year_traff">Years usage traffic</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="data_day">Mobile data per day : </string>
    <string name="all_data">\n All mobile data: </string>
    <string name="traff_control">Application is controlling your traffic</string>
    <string name="foreground">Enable foreground</string>
    <string name="limit_status">Traffic limit per day:\n</string>
    <string name="widget_name">Traffic Widget</string>
	<string name="dialog_name">Rate the app</string>
	<string name="dialog_msg">Please rate our app.</string>
	<string name="dialog_rate">Rate</string>
	<string name="dialog_never">Never</string>
	<string name="dialog_later">Later</string>
	<string name="widget_left">Remaining traffic:</string>
	<string name="widget_used">Used traffic:</string>
	<string name="widget_all">All traffic:</string>
	<string name="stopped_service">Service was stopped</string>
	<string name="started_service">Service was started</string>
	<string name="pref_about">About programm</string>
	<string name="pref_internet_category">Internet</string>
	<string-array name="pref_internet_values">
	    <item > 0 kB</item>
		<item >10 kB</item>
		<item >50 kB</item>
		<item >100 kB</item>
		<item >200 kB</item>
		<item >500 kB</item>
	</string-array>
	<string name="pref_internet_round">Round the traffic</string>
	<string name="pref_internet_tarif">Set tarification rounding</string>
	<string name="pref_internet_tarif_summary">This will round your traffic to the selected value every time, when internet session is disconected</string>
	<string name="pref_internet_round_summ">Enable rounding the traffic</string>
	<integer-array name="pref_internet_int_value">
		<item >0</item>
		<item >1</item>
		<item >2</item>
		<item >3</item>
		<item> 4</item>
	</integer-array>
	<string name="pref_tarif_val">Tarification values</string>
	<string name="help_dev">Help the developer</string>
	<string name="web_money">wmu: \nU595726339489</string>
	<string name="privat">Bank card number: \n5168 7553 5153 4660</string>
	<string name="version">Version 2.0</string>
	<string name="date_release">March 2014</string>
	<string name="copyright">Copyright © EvilCorp Dev 2013–2014</string>
	<string name="pref_Time_on">Time to disable internet</string>
	<string name="pref_time_on_summ">Set time when mobile internet will be disable</string>
	<string name="pref_time_summ">Set time </string>
	<string name="pref_time_title">Time to close Internet connection</string>
</resources>