<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistic_text" />

    <RadioGroup 
        android:id="@+id/rGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">
        
   		<RadioButton
        	android:id="@+id/rBtnWeek"
        	android:checked="true"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/week" />

    	<RadioButton
        	android:id="@+id/rBtnMonth"
       		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/month" />

    	<RadioButton
        	android:id="@+id/rBtnSixMonth"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/six_months" />

    	<RadioButton
        	android:id="@+id/rBtnYear"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/year" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/mkBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="make_stat"
            android:text="@string/make_stat" />

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:onClick="clear_data"
            android:text="@string/clear" />
         <com.google.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-8090249245218613/5392174689"
            ads:loadAdOnCreate="true"
            android:layout_gravity="bottom" />

    </LinearLayout>

</LinearLayout>
