<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info" />

        <TextView
            android:id="@+id/tvMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <ImageView
            android:id="@+id/imView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="changeState"
            android:contentDescription="@string/stop"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download" />

        <ProgressBar
            android:id="@+id/pbLimit"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" />
        
        <com.google.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-8090249245218613/5392174689"
            ads:loadAdOnCreate="true"
            android:layout_gravity="bottom" />

	</LinearLayout>
