<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widgetLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    android:background="@drawable/widget_back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             >

            <TextView
                android:id="@+id/tvInfoLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:text="@string/widget_left"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvInfoDigit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text=""
                android:textColor="#000000"
                android:textSize="35sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvUsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/widget_used"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/widget_all"
                android:textColor="#000000"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>